plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.s207.cloudy'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // dynamoDB
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1")
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-dynamodb'

    implementation 'dev.langchain4j:langchain4j-spring-boot-starter:0.30.0'
    implementation 'dev.langchain4j:langchain4j-open-ai-spring-boot-starter:0.30.0'
    implementation 'dev.langchain4j:langchain4j-pinecone:0.30.0'

//    implementation 'org.springframework.boot:spring-boot-starter-websocket'
//    implementation 'org.webjars:sockjs-client:1.5.1'
//    implementation 'org.webjars:stomp-websocket:2.3.4'

    //deploy by sam and lambda
    implementation 'com.amazonaws.serverless:aws-serverless-java-container-springboot3:2.0.0-M2'
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.4'
    implementation 'com.amazonaws:aws-lambda-java-log4j2:1.5.1'
    implementation platform('software.amazon.awssdk:bom:2.23.12')
    implementation 'software.amazon.awssdk:s3'

}

tasks.named('test') {
    useJUnitPlatform()
}
